--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
 .work-sans-font">
     <header>
        
-        <nav class="navbar">
-            <h3 class="brand">G3 Architect</h3>
+        <nav class="navbar display-flex">
+            <h3 class="brand">Gre Architect</h3>
+            <ul class="nav-links display-flex">
+                <!-- <div> -->
+                    <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
+                <!-- </div> -->
+                <!-- <div> -->
+                    <li class="nav-item"><a href="" class="nav-link">Login</a></li>
+                <!-- </div> -->
+            </ul>
         </nav>
+        
     </header>
     <main>
         <section>
@@ -22,5 +33,8 @@
     <footer>
 
     </footer>
+
+
+
 </body>
 </html>
