--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <h3 class="brand">Gre Architect</h3>
             <ul class="nav-links display-flex">
                 <!-- <div> -->
-                    <li class="nav-item"><a href="" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
+                    <li class="nav-item"><a href="" class="nav-link text-gray">Home</a></li>
+                    <li class="nav-item"><a href="" class="nav-link text-gray">About</a></li>
+                    <li class="nav-item"><a href="" class="nav-link text-gray">Contact</a></li>
                 <!-- </div> -->
                 <!-- <div> -->
                     <li class="nav-item"><a href="" class="nav-link">Login</a></li>
